--- a/new_site/index.html
+++ b/new_site/index.html
@@ -4,7 +4,8 @@
 	<title>Hello everyone</title>
 </head>
 <body>
-<h1>Hello world ...you get there!</h1>
+<h1>Hello world ..greeaattt..you get there!</h1>
 <h2>this is the change</h2>
+<h3>wow this is smthing</h3>
 </body>
 </html>
