--- a/week2/index.html
+++ b/week2/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="style/style.css">
 	<title>Hello everyone</title>
+
 </head>
 <body>
-<h1>Hello world ..greeaattt..you get there!</h1>
-<h2>this is the change</h2>
-<h3>wow this is smthing</h3>
-<h3>new push</h3>
+	<div id="Mheading">Our Menu</div>
+  <div class="container">
+	<div class="x col-lg-4 col-md-6 col-sm-12">
+		<div id="n1" class="Sheading">Kadhai Paneer</div>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer massa leo, euismod blandit erat eu, imperdiet ullamcorper massa. Nunc nibh nibh, euismod in ultrices in, eleifend ut arcu. Ut efficitur elit ipsum, ut cursus nulla varius quis. Nam pretium purus quis augue hendrerit porttitor. Vestibulum rhoncus nisl vitae odio venenatis, sed vestibulum tortor malesuada. Suspendisse molestie lobortis urna sit amet pharetra. Sed tristique enim ut egestas sodales. Etiam quis auctor nisl.</p>
+	</div>
+
+	<div class="x col-lg-4 col-md-6 col-sm-12">
+		<div id="n2" class="Sheading">Momos</div>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer massa leo, euismod blandit erat eu, imperdiet ullamcorper massa. Nunc nibh nibh, euismod in ultrices in, eleifend ut arcu. Ut efficitur elit ipsum, ut cursus nulla varius quis. Nam pretium purus quis augue hendrerit porttitor. Vestibulum rhoncus nisl vitae odio venenatis, sed vestibulum tortor malesuada. Suspendisse molestie lobortis urna sit amet pharetra. Sed tristique enim ut egestas sodales. Etiam quis auctor nisl.</p>
+	</div>
+
+	<div class="x col-lg-4 col-md-12 col-sm-12">
+		<div id="n3" class="Sheading">Pizza</div>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer massa leo, euismod blandit erat eu, imperdiet ullamcorper massa. Nunc nibh nibh, euismod in ultrices in, eleifend ut arcu. Ut efficitur elit ipsum, ut cursus nulla varius quis. Nam pretium purus quis augue hendrerit porttitor. Vestibulum rhoncus nisl vitae odio venenatis, sed vestibulum tortor malesuada. Suspendisse molestie lobortis urna sit amet pharetra. Sed tristique enim ut egestas sodales. Etiam quis auctor nisl.</p>
+	</div>
+
+  </div>
 </body>
 </html>
