--- a/week2/index.html
+++ b/week2/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="style/style.css">
-	<title>Hello everyone</title>
+	<title>Module 2 Assignment</title>
 
 </head>
 <body>
