--- a/week2/index.html
+++ b/week2/index.html
@@ -17,7 +17,7 @@
 
 	<div class="x col-lg-4 col-md-6 col-sm-12">
 		<div id="n2" class="Sheading">Momos</div>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer massa leo, euismod blandit erat eu, imperdiet ullamcorper massa. Nunc nibh nibh, euismod in ultrices in, eleifend ut arcu. Ut efficitur elit ipsum, ut cursus nulla varius quis. Nam pretium purus quis augue hendrerit porttitor. Vestibulum rhoncus nisl vitae odio venenatis, sed vestibulum tortor malesuada. Suspendisse molestie lobortis urna sit amet pharetra. Sed tristique enim ut egestas sodales. Etiam quis auctor nisl.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer massa leo, euismod blandit erat eu, imperdiet ullamcorper massa. Nunc nibh nibh, euismod in ultrices in, eleifend ut arcu. Ut efficitur elit ipsum, ut cursus nulla varius quis. Nam pretium purus quis ahendrerit porttitor. Vestibulum rhoncus nisl vitae odio venenatis, sed vestibulum tortor malesuada. Suspendisse molestie lobortis urna sit amet pharetra. Sed tristique enim ut egestas sodales. Etiam quis auctor nisl.</p>
 	</div>
 
 	<div class="x col-lg-4 col-md-12 col-sm-12">
