--- a/week2/index.html
+++ b/week2/index.html
@@ -26,6 +26,6 @@
 	</div>
 
   </div>
-  <div><a href="index11.html" >click</a></div>
+  <a href="inbox/index11.html" > click </a>
 </body>
 </html>
